Added Airflow Certificate

--- a/index.html
+++ b/index.html
@@ -551,6 +551,16 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
+								<span class="date">04/2022</span>
+								<h2>Apache Airflow Fundamentals</h2>
+								<span class="position">Astronomer Certification</span>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							<div class="text pl-3">
 								<span class="date">12/2021-12/2023</span>
 								<h2>Apache Druid Basic</h2>
 								<span class="position">Imply</span>
