--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
 				<div class="col-md-3">
 					<nav id="navi">
 						<ul>
-							<li><a href="#page-1">Experience</a></li>
-							<li><a href="#page-2">Skills</a></li>
-							<li><a href="#page-3">Certifications</a></li>
-							<li><a href="#page-4">Education</a></li>
+							<li><a href="#experience">Experience</a></li>
+							<li><a href="#skills">Skills</a></li>
+							<li><a href="#certifications">Certifications</a></li>
+							<li><a href="#education">Education</a></li>
 						</ul>
 					</nav>
 				</div>
 				<div class="col-md-9">
-					<div id="page-1" class="page one">
+					<div id="experience" class="page one">
 						<h2 class="heading">Experience</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
@@ -247,7 +247,7 @@
 							</div>
 						</div>
 					</div>
-					<div id="page-2" class="page two">
+					<div id="skills" class="page two">
 						<h2 class="heading">Skills</h2>
 
 						<!-- <div class="row progress-circle mb-5">
@@ -554,7 +554,7 @@
 						</div>
 
 					</div>
-					<div id="page-3" class="page three">
+					<div id="certifications" class="page three">
 						<h2 class="heading">Certifications</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
@@ -597,7 +597,7 @@
 							</div>
 						</div>
 					</div>
-					<div id="page-4" class="page four">
+					<div id="education" class="page four">
 						<h2 class="heading">Education</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
