Re-written experiences

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
-							<p>Create an opportunity, Take the Ownership, get the Work done and Make an Impact !</p>
+							<p>A passionate, self-driven data engineer with 6+ years of experience in working with the data & constantly adopting new technologies and roles.</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Dharam Gajera</span></li>
 								<li class="d-flex"><span>Date of birth:</span> <span>June 25, 1994</span></li>
@@ -182,10 +182,12 @@
 								<p>CloudCover is mainly into cloud services and consultancy. The Data team at CloudCover helps organizations to migrate or adopt clouds for their data needs.</p>
 								<p><strong>Tonik Bank</strong> is a digital only bank in the Philippines. They want to build a data lake on GCP for their analytics needs.</p>
 								<ul>
-									<li>Outlining the data architecture using managed GCP services.</li>
-									<li>Strategizing and developing data pipelines.</li>
-									<li>Helping client with the requirements and advising where necessary.</li>
+									<li>Outlined a future-proof data architecture on GCP for streaming and batch use cases.</li>
+									<li>Generated dynamic config-driven data pipelines for effortless data on-boarding.</li>
+									<li>Expedited entire report generation manual process with an automated solution.</li>
 								</ul>
+								<p>Tech Stake - GCP, Apache Airflow, Dataflow (Apache Beam), DataProc (Managed
+									Spark), BigQuery, DLP, PubSub</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -196,17 +198,16 @@
 								<span class="date">01/2019-08/2021</span>
 								<h2>Data Engineer</h2>
 								<span class="position">Avesta Technologies</span>
-								<p>Avesta is a Product cum Solutions based company and has a suite of products/solutions e.g.. Digital Scanning & Assessment, Digital Hall Tickets, Digital University, Industrial IoT, Marketing Automation, etc.</p>
-								<p><strong>RealEstate Company</strong> is one of the top RealEstate Company, overseas. They want to do ClickStream Data Analysis on their sites. They are using this data for Analytics and Reporting purposes.</p>
-								<p><strong>Digital Scanning & Assessment</strong> product needs to be integrated with clickstream data analysis capabilities. This is to capture all the actions for audit purposes.</p>
+								<p>Avesta is a Product cum Solutions based company and has a suite of products/solutions. We need to build ClickStream data analysis capabilities for a <strong>RealEstate Company</strong> and in our <strong>Digital Scanning & Assessment</strong> product.</p>
 								<ul>
-									<li>Understanding Client requirements and suggesting where required.</li>
-									<li>Designing data schema and data pipeline architecture.</li>
-									<li>Building and Managing all the Infra and tools on AWS.</li>
-									<li>Working with the frontend/backend team to get the capturing code implemented.</li>
-									<li>Testing and Verifying the data captured.</li>
-									<li>Building dashboards for business and writing queries for reporting.</li>
+									<li>Built a simple but highly scalable architecture on AWS for Clickstream data analytics.</li>
+									<li>Engineered cost-effective data pipelines using open source tools.</li>
+									<li>Created an evolving data model to support future needs and efficient reporting.</li>
+									<li>Catered visualization needs by creating dashboards for business metrics.</li>
+									<li>Promoted self-service analytics mindset.</li>
+									<li>Discovered hidden insights and some bugs in software by analysing clickstream data.</li>
 								</ul>
+								<p>Tech Stake - AWS, Matomo, Divolte, Apache Airflow, Apache Druid, Apache Superset, Apache Kafka, Docker</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -217,14 +218,11 @@
 								<span class="date">01/2018-01/2019</span>
 								<h2>Machine Learning Engineer</h2>
 								<span class="position">Avesta Technologies</span>
-								<p><strong>Digital Scanning & Assessment</strong> needs to be integrated with AI and Computer Vision techniques to minimize human efforts, errors, execution time and cost. As a result, overall project execution time and cost is decreased to a great extent.</p>
+								<p>We need to modernize <strong>Digital Scanning & Assessment</strong> product with AI and Computer Vision techniques to minimize human efforts, errors, execution time and cost.</p>
 								<ul>
-									<li>Building and Setting Environment for ML.</li>
-									<li>Doing R&D on the state-of-the-art technologies and evaluating each.</li>
-									<li>Gathering, Cleaning, Labeling and Augmenting Data for Input to ML model.</li>
-									<li>Training ML models, optimizing HyperParameters and fine tuning.</li>
-									<li>Integrating Models and Computer vision algorithms into Existing application workflow.</li>
-									<li>Deploying and Maintaining ML models and preparing for next iteration.</li>
+									<li>Re-worked manual workflows, replacing with AI-enabled processes.</li>
+									<li>Cut down overall project execution time by atleast 30%, bringing down project cost.</li></li>
+									<li>Prepared and integrated ML models and Computer vision algorithms in the application.</li>
 								</ul>
 							</div>
 						</div>
@@ -236,13 +234,11 @@
 								<span class="date">08/2015-01/2018</span>
 								<h2>Software Engineer</h2>
 								<span class="position">Tech Mahindra Ltd.</span>
-								<p><strong>British Telecom</strong> is well-known across the globe as BT and has a lot of systems across multiple LOBs. Responsible for giving 2nd line support but have worked on almost every aspect of a Software Journey. Worked mainly on Broadband Provisioning systems for Retail and Wholesale LOBs.</p>
+								<p><strong>British Telecom</strong> is well-known across the globe as BT and has a lot of systems across multiple LOBs. Involved in almost every aspect of the Software Journey.</p>
 								<ul>
-									<li>Getting involved in Design Discussions and Development.</li>
-									<li>Developing Pig & Hive Scripts for data processing & storing the data.</li>
-									<li>Monitoring & identifying defects/issues and resolving them. Also Handling Escalations.</li>
-									<li>Writing POCs in Spark for future enhancements and migrations.</li>
-									<li>Supporting & Maintaining Production environments i.e. Patching servers, Monitoring, Deployments, etc.</li>
+									<li>Put automated reports and alerts in action to raise the alarms well in advance.</li>
+									<li>Reduced efforts on IR/SR by automating repetitive tasks using scripts.</li>
+									<li>Utilized end-to-end knowledge to make designs better and more diagnose-friendly.</li>
 								</ul>
 							</div>
 						</div>
@@ -586,7 +582,7 @@
 								<span class="position">Coursera</span>
 							</div>
 						</div>
-						<div class="resume-wrap d-flex ftco-animate">
+						<!-- <div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
 							</div>
@@ -595,7 +591,7 @@
 								<h2>AI For Everyone</h2>
 								<span class="position">Coursera</span>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<div id="education" class="page four">
 						<h2 class="heading">Education</h2>
@@ -609,7 +605,7 @@
 								<span class="position">M.S. University, Baroda</span>
 							</div>
 						</div>
-						<div class="resume-wrap d-flex ftco-animate">
+						<!-- <div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
 							</div>
@@ -618,7 +614,7 @@
 								<h2>Higher Secondary Education</h2>
 								<span class="position">CBSE Board</span>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
