Coverted images to webp

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 				<div class="col-md-6 col-lg-6 d-flex">
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
-						<div class="img d-flex align-self-stretch align-items-center lazyload"
-							style="background-image:url(images/portrait.jpg);">
+						<div class="img d-flex align-self-stretch align-items-center"
+							style="background-image:url(images/portrait.webp);">
 						</div>
 					</div>
 				</div>
@@ -131,23 +131,23 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm ftco-animate">
-					<a href="#" class="partner"><img src="images/partner-aws.png" class="img-fluid lazyload"
+					<a href="#" class="partner"><img src="images/partner-aws.webp" class="img-fluid"
 							alt="Colorlib Template"></a>
 				</div>
 				<div class="col-sm ftco-animate">
-					<a href="#" class="partner"><img src="images/partner-gcp.png" class="img-fluid lazyload"
+					<a href="#" class="partner"><img src="images/partner-gcp.webp" class="img-fluid"
 							alt="Colorlib Template"></a>
 				</div>
 				<div class="col-sm ftco-animate">
-					<a href="#" class="partner"><img src="images/partner-python.png" class="img-fluid lazyload"
+					<a href="#" class="partner"><img src="images/partner-python.webp" class="img-fluid"
 							alt="Colorlib Template"></a>
 				</div>
 				<div class="col-sm ftco-animate">
-					<a href="#" class="partner"><img src="images/partner-sql.png" class="img-fluid lazyload"
+					<a href="#" class="partner"><img src="images/partner-sql.webp" class="img-fluid"
 							alt="Colorlib Template"></a>
 				</div>
 				<div class="col-sm ftco-animate">
-					<a href="#" class="partner"><img src="images/partner-asf.png" class="img-fluid lazyload"
+					<a href="#" class="partner"><img src="images/partner-asf.webp" class="img-fluid"
 							alt="Colorlib Template"></a>
 				</div>
 			</div>
@@ -1077,7 +1077,6 @@
 	<script src="js/scrollax.min.js"></script>
 
 	<script src="js/main.js"></script>
-	<script src="lazysizes.min.js" async></script>
 
 </body>
 
