--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 	<!-- Services Section -->
 	<section class="ftco-section" id="services-section">
 		<div class="container-fluid px-md-5">
-			<div class="row justify-content-center py-5 mt-5">
+			<div class="row justify-content-center py-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Services</h1>
 					<h2 class="mb-4">Services</h2>
@@ -897,9 +897,12 @@
 			<div class="row d-flex contact-info mb-5">
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box text-center p-4 shadow">
-						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-github"></span>
-						</div>
+							<div class="icon d-flex align-items-center justify-content-center">
+								<a href="https://github.com/TheRum" target="_blank" rel="noopener noreferrer">
+									<span class="icon-github"></span>
+								</a>
+							</div>
+						</a>
 						<div>
 							<h3 class="mb-4"><a href="https://github.com/TheRum" target="_blank" rel="noopener noreferrer">Github</a></h3>
 						</div>
@@ -908,7 +911,9 @@
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box text-center p-4 shadow">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-linkedin"></span>
+							<a href="https://www.linkedin.com/in/gajeradharam" target="_blank" rel="noopener noreferrer">
+								<span class="icon-linkedin"></span>
+							</a>
 						</div>
 						<div>
 							<h3 class="mb-4"><a href="https://www.linkedin.com/in/gajeradharam" target="_blank" rel="noopener noreferrer">LinkedIn</a></h3>
@@ -928,7 +933,9 @@
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box text-center p-4 shadow">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-paper-plane"></span>
+							<a href="mailto: gajeradharam@gmail.com">
+								<span class="icon-paper-plane"></span>
+							</a>
 						</div>
 						<div>
 							<h3 class="mb-4"><a href="mailto: gajeradharam@gmail.com">Email</a></h3>
@@ -938,7 +945,9 @@
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box text-center p-4 shadow">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-globe"></span>
+							<a href="https://therum.me/" target="_blank" rel="noopener noreferrer">
+								<span class="icon-globe"></span>
+							</a>
 						</div>
 						<div>
 							<h3 class="mb-4"><a href="https://therum.me/" target="_blank" rel="noopener noreferrer">Website</a></h3>
