Updated write up

--- a/index.html
+++ b/index.html
@@ -181,14 +181,19 @@
 								<h2>Data Engineer IV</h2>
 								<span class="position">CloudCover</span>
 								<p>CloudCover is mainly into cloud services and consultancy. The Data team at CloudCover helps organizations to migrate or adopt clouds for their data needs.</p>
+								<p><strong>Data Migration</strong> for a client from Azure Cosmos to Spanner sizing in TBs.</p>
+								<ul>
+									<li>Strategised migration and rollback plans.</li>
+									<li>Developed data pipelines for Batch import and CDC replication.</li>
+									<li>Tech Stake - Dataflow (Apache Beam), Spanner, Cosmos, Airflow, PubSub, Eventhub</li>
+								</ul>
 								<p><strong>Tonik Bank</strong> is a digital only bank in the Philippines. They want to build a data lake on GCP for their analytics needs.</p>
 								<ul>
-									<li>Outlined a future-proof data architecture on GCP for streaming and batch use cases.</li>
+									<li>Outlined a future-proof data architecture for streaming and batch use cases.</li>
 									<li>Generated dynamic config-driven data pipelines for effortless data on-boarding.</li>
-									<li>Expedited entire report generation manual process with an automated solution.</li>
+									<li>Expedited the entire report generation manual process with an automated solution.</li>
+									<li>Tech Stake - GCP, Airflow, Dataflow, DataProc (Spark), BigQuery, DLP, PubSub</li>
 								</ul>
-								<p>Tech Stake - GCP, Apache Airflow, Dataflow (Apache Beam), DataProc (Managed
-									Spark), BigQuery, DLP, PubSub</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -201,12 +206,13 @@
 								<span class="position">Avesta Technologies</span>
 								<p>Avesta is a Product cum Solutions based company and has a suite of products/solutions. We need to build ClickStream data analysis capabilities for a <strong>RealEstate Company</strong> and in our <strong>Digital Scanning & Assessment</strong> product.</p>
 								<ul>
-									<li>Built a simple but highly scalable architecture on AWS for Clickstream data analytics.</li>
-									<li>Engineered cost-effective data pipelines using open source tools.</li>
+									<li>Built a simple but highly scalable architecture on AWS for Clickstream analytics.</li>
 									<li>Created an evolving data model to support future needs and efficient reporting.</li>
-									<li>Catered visualization needs by creating dashboards for business metrics.</li>
-									<li>Promoted self-service analytics mindset.</li>
+									<li>Working with the frontend/backend team to get the capturing code implemented.</li>
+									<li>Engineered cost-effective data pipelines using open source tools.</li>
+									<li>Testing and Verifying the data captured.</li>
 									<li>Discovered hidden insights and some bugs in software by analysing clickstream data.</li>
+									<li>Building dashboards for business and writing queries for reporting.</li>
 								</ul>
 								<p>Tech Stake - AWS, Matomo, Divolte, Apache Airflow, Apache Druid, Apache Superset, Apache Kafka, Docker</p>
 							</div>
@@ -221,10 +227,11 @@
 								<span class="position">Avesta Technologies</span>
 								<p>We need to modernize <strong>Digital Scanning & Assessment</strong> product with AI and Computer Vision techniques to minimize human efforts, errors, execution time and cost.</p>
 								<ul>
-									<li>Re-worked manual workflows, replacing with AI-enabled processes.</li>
-									<li>Cut down overall project execution time by atleast 30%, bringing down project cost.</li></li>
-									<li>Prepared and integrated ML models and Computer vision algorithms in the application.</li>
+									<li>Researching, evaluating and implementing the state-of-the-art ML models.</li>
+									<li>Data Cleansing, Data Preparation, Model training, fine tuning and deploying.</li>
+									<li>Integrating Models and Computer vision algorithms into Existing application workflow.</li>
 								</ul>
+								<p>Tech Stake - Keras, OpenCV, CUDA, Docker</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -235,11 +242,11 @@
 								<span class="date">08/2015-01/2018</span>
 								<h2>Software Engineer</h2>
 								<span class="position">Tech Mahindra Ltd.</span>
-								<p><strong>British Telecom</strong> is well-known across the globe as BT and has a lot of systems across multiple LOBs. Involved in almost every aspect of the Software Journey.</p>
+								<p><strong>British Telecom</strong> having a lot of systems across multiple LOBs. Was responsible for giving 2nd line support but have worked on almost every aspect of a Software Journey.</p>
 								<ul>
-									<li>Put automated reports and alerts in action to raise the alarms well in advance.</li>
-									<li>Reduced efforts on IR/SR by automating repetitive tasks using scripts.</li>
-									<li>Utilized end-to-end knowledge to make designs better and more diagnose-friendly.</li>
+									<li>Getting involved in Design Discussions and Development.</li>
+									<li>Automated repetitive tasks using scripts to reduce efforts on incidents/service requests.</li>
+									<li>Monitoring, Deploying, Supporting & Maintaining Production environments.</li>
 								</ul>
 							</div>
 						</div>
@@ -520,12 +527,12 @@
 							</div>
 							<div class="col-md-3 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3><a href="https://www.docker.com/" target="_blank" rel="noopener noreferrer" style="color:black;">Docker</a></h3>
+									<h3><a href="https://www.java.com/" target="_blank" rel="noopener noreferrer" style="color:black;">Java</a></h3>
 								</div>
 							</div>
 							<div class="col-md-3 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3><a href="https://git-scm.com/" target="_blank" rel="noopener noreferrer" style="color:black;">Git</a></h3>
+									<h3><a href="https://www.docker.com/" target="_blank" rel="noopener noreferrer" style="color:black;">Docker</a></h3>
 								</div>
 							</div>
 							<div class="col-md-3 animate-box">
@@ -546,6 +553,16 @@
 							<div class="col-md-3 animate-box">
 								<div class="progress-wrap ftco-animate">
 									<h3><a href="https://kafka.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Apache Kafka</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://beam.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Apache Beam</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://git-scm.com/" target="_blank" rel="noopener noreferrer" style="color:black;">Git</a></h3>
 								</div>
 							</div>
 						</div>
