Updated promotion and added CV

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 								<span class="number" data-number="12">0</span>
 								<span>Project complete</span>
 							</p>
-							<p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+							<p><a href="assets/CV_Dharam_Gajera_Data_Engineer.pdf" class="btn btn-primary py-3 px-3" target="_blank" download>Download CV</a></p>
 						</div>
 					</div>
 				</div>
@@ -177,8 +177,8 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">08/2021-Present</span>
-								<h2>Data Engineer IV</h2>
+								<span class="date">05/2022-Present</span>
+								<h2>Senior Data Engineer</h2>
 								<span class="position">CloudCover</span>
 								<p>CloudCover is mainly into cloud services and consultancy. The Data team at CloudCover helps organizations to migrate or adopt clouds for their data needs.</p>
 								<p><strong>Data Migration</strong> for a client from Azure Cosmos to Spanner sizing in TBs.</p>
@@ -187,6 +187,16 @@
 									<li>Developed data pipelines for Batch import and CDC replication.</li>
 									<li>Tech Stake - Dataflow (Apache Beam), Spanner, Cosmos, Airflow, PubSub, Eventhub</li>
 								</ul>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							<div class="text pl-3">
+								<span class="date">08/2021-Present</span>
+								<h2>Data Engineer</h2>
+								<span class="position">CloudCover</span>
 								<p><strong>Tonik Bank</strong> is a digital only bank in the Philippines. They want to build a data lake on GCP for their analytics needs.</p>
 								<ul>
 									<li>Outlined a future-proof data architecture for streaming and batch use cases.</li>
