--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
 	<section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
 		<div class="container">
 			<div class="row d-flex no-gutters">
-				<div class="col-md-6 col-lg-6 d-flex">
+				<!-- <div class="col-md-6 col-lg-6 d-flex">
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
 						<div class="img d-flex align-self-stretch align-items-center"
 							style="background-image:url(images/portrait.webp);">
 						</div>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-6 pl-md-5 py-5">
+				</div> -->
+				<div class="col-md-6 col-lg-12 pl-md-5 py-5">
 					<div class="row justify-content-start pb-3">
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
-							<h2 class="mb-4">About Me</h2>
+							<h2 class="mb-4 text-center">About Me</h2>
 							<p>A passionate, self-driven data engineer with 6+ years of experience in working with the data & constantly adopting new technologies and roles.</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Dharam Gajera</span></li>
