Updated recent experience

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-					<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+					<li class="nav-item"><a href="#experience-section" class="nav-link"><span>Experience</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 					<!-- <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li> -->
 					<!-- <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li> -->
@@ -71,7 +71,7 @@
 						<h1>Dharam Gajera</h1>
 						<h2>I'm a
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='[ "Data Engineer.", "Data Architect.", "Data Analyst.", "Developer." ]'></span>
+								data-rotate='[ "Data Engineer.", "Data Architect.", "Data Consultant.", "Data Developer." ]'></span>
 						</h2>
 					</div>
 				</div>
@@ -102,7 +102,7 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4 text-center">About Me</h2>
-							<p>A passionate, self-driven data engineer with 7+ years of experience in working with the data & constantly adopting new technologies and roles.</p>
+							<p>Certified Data engineer with 8.5+ years of experience in outlining data architectures, developing data pipelines, building data warehouses and supercharging applications with AI. Proficient in open-source and cloud proprietor tools.</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Dharam Gajera</span></li>
 								<li class="d-flex"><span>Date of birth:</span> <span>June 25, 1994</span></li>
@@ -116,7 +116,7 @@
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
 							<p class="mb-4">
-								<span class="number" data-number="12">0</span>
+								<span class="number" data-number="20">0</span>
 								<span>Project complete</span>
 							</p>
 							<p><a href="assets/CV_Dharam_Gajera_Data_Engineer.pdf" class="btn btn-primary py-3 px-3" target="_blank" download>Download CV</a></p>
@@ -156,7 +156,7 @@
 	</section>
 
 	<!-- Resume Section -->
-	<section class="ftco-section ftco-no-pb goto-here" id="resume-section">
+	<section class="ftco-section ftco-no-pb goto-here" id="experience-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3">
@@ -179,13 +179,17 @@
 							<div class="text pl-3">
 								<span class="date">05/2022-Present</span>
 								<h2>Senior Data Engineer</h2>
-								<span class="position">CloudCover</span>
-								<p>CloudCover is mainly into cloud services and consultancy. The Data team at CloudCover helps organizations to migrate or adopt clouds for their data needs.</p>
-								<p><strong>Data Migration</strong> for a client from Azure Cosmos to Spanner sizing in TBs.</p>
+								<span class="position">Ollion</span>
+								<p><strong>Ollion</strong> is a Singapore headquartered services base company helping clients with their data needs.</p>
+								<p><strong>Tech Stake</strong> - GCP, Dataflow (Apache Beam), BigQuery, Composer, PubSub, Spanner, DynamoDB, MongoDB, BigTable, Datastore, Airflow, Spark (Dataproc), DLP, Cloud Functions</p>
 								<ul>
-									<li>Strategised migration and rollback plans.</li>
-									<li>Developed data pipelines for Batch import and CDC replication.</li>
-									<li>Tech Stake - Dataflow (Apache Beam), Spanner, Cosmos, Airflow, PubSub, Eventhub</li>
+									<li>Leading pre-sales calls for technical discovery and documenting requirements.</li>
+									<li>Proposing solutions and architectures. Preparing estimations & SoWs.</li>
+									<li>Managing stakeholders, communicating with clients and leading projects technically.</li>
+									<li>Designing, building, deploying and maintaining data pipelines and data platforms.</li>
+									<li>Performing testing, conducting code reviews, and enhancing the performance.</li>
+									<li>Overseeing a team of data engineers and mentoring them by providing technical expertise.</li>
+									<li>Designed and Delivered several data migration, one data validation, one data mesh, one data modernization, one real-time processing and a few data warehouse implementation projects.</li>
 								</ul>
 							</div>
 						</div>
@@ -196,13 +200,12 @@
 							<div class="text pl-3">
 								<span class="date">08/2021-Present</span>
 								<h2>Data Engineer</h2>
-								<span class="position">CloudCover</span>
-								<p><strong>Tonik Bank</strong> is a digital only bank in the Philippines. They want to build a data lake on GCP for their analytics needs.</p>
+								<span class="position">Ollion</span>
+								<p>Built a data lake from scratch on GCP for a neo bank client.</p>
 								<ul>
 									<li>Outlined a future-proof data architecture for streaming and batch use cases.</li>
-									<li>Generated dynamic config-driven data pipelines for effortless data on-boarding.</li>
-									<li>Expedited the entire report generation manual process with an automated solution.</li>
-									<li>Tech Stake - GCP, Airflow, Dataflow, DataProc (Spark), BigQuery, DLP, PubSub</li>
+									<li>Generated dynamic config-driven data pipelines orchestrated via Airflow.</li>
+									<li>Automated the entire manual report generation process.</li>
 								</ul>
 							</div>
 						</div>
@@ -214,17 +217,14 @@
 								<span class="date">01/2019-08/2021</span>
 								<h2>Data Engineer</h2>
 								<span class="position">Avesta Technologies</span>
-								<p>Avesta is a Product cum Solutions based company and has a suite of products/solutions. We need to build ClickStream data analysis capabilities for a <strong>RealEstate Company</strong> and in our <strong>Digital Scanning & Assessment</strong> product.</p>
+								<p><strong>Avesta</strong> is a Product cum Solutions based company and has a suite of solutions for Education Sector.</p>
+								<p><strong>Tech Stake</strong> - AWS, Matomo, Divolte, Apache Airflow, Apache Druid, Apache Superset, Apache Kafka, Docker, KSQL, MySQL</p>
+								<p>Integrated ClickStream Analytics for a RealEstate portal and in our Digital Assessment product.</p>
 								<ul>
-									<li>Built a simple but highly scalable architecture on AWS for Clickstream analytics.</li>
-									<li>Created an evolving data model to support future needs and efficient reporting.</li>
-									<li>Working with the frontend/backend team to get the capturing code implemented.</li>
-									<li>Engineered cost-effective data pipelines using open source tools.</li>
-									<li>Testing and Verifying the data captured.</li>
-									<li>Discovered hidden insights and some bugs in software by analysing clickstream data.</li>
-									<li>Building dashboards for business and writing queries for reporting.</li>
+									<li>Built a simple yet scalable architecture on AWS for Clickstream analytics.</li>
+									<li>Engineered cost-effective data pipelines/ETLs. Query results within 2 sec on 1 Billion data points for a monthly cost of < 500$.</li>
+									<li>Built 15+ dashboards and 5+ reports to cater different business needs.</li>
 								</ul>
-								<p>Tech Stake - AWS, Matomo, Divolte, Apache Airflow, Apache Druid, Apache Superset, Apache Kafka, Docker</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -235,13 +235,13 @@
 								<span class="date">01/2018-01/2019</span>
 								<h2>Machine Learning Engineer</h2>
 								<span class="position">Avesta Technologies</span>
-								<p>We need to modernize <strong>Digital Scanning & Assessment</strong> product with AI and Computer Vision techniques to minimize human efforts, errors, execution time and cost.</p>
+								<p>Modernized <strong>Digital Scanning & Assessment</strong> product with AI and Computer Vision techniques to minimize human efforts, errors, execution time and cost.</p>
+								<p><strong>Tech Stake</strong> - Linux, Keras, Tensorflow, OpenCV, CUDA, Docker</p>
 								<ul>
-									<li>Researching, evaluating and implementing the state-of-the-art ML models.</li>
-									<li>Data Cleansing, Data Preparation, Model training, fine tuning and deploying.</li>
-									<li>Integrating Models and Computer vision algorithms into Existing application workflow.</li>
+									<li>Implemented Blank page check, Blur page check, objects in image and Page number identification with > 99% accuracy, using custom in-house developed ML models.</li>
+									<li>Implemented custom cropping and alignment algorithm for better image quality.</li>
+									<li>Automated Image enhancements for clear and readable images.</li>
 								</ul>
-								<p>Tech Stake - Keras, OpenCV, CUDA, Docker</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -517,12 +517,12 @@
 							</div>
 							<div class="col-md-3 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3><a href="https://cloud.google.com/bigquery" target="_blank" rel="noopener noreferrer" style="color:black;">BigQuery</a></h3>
+									<h3><a href="https://beam.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Aapche Beam</a></h3>
 								</div>
 							</div>
 							<div class="col-md-3 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3><a href="https://cloud.google.com/dataflow" target="_blank" rel="noopener noreferrer" style="color:black;">DataFlow</a></h3>
+									<h3><a href="https://spark.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Apache Spark</a></h3>
 								</div>
 							</div>
 							<div class="col-md-3 animate-box">
@@ -542,37 +542,82 @@
 							</div>
 							<div class="col-md-3 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3><a href="https://www.docker.com/" target="_blank" rel="noopener noreferrer" style="color:black;">Docker</a></h3>
-								</div>
-							</div>
-							<div class="col-md-3 animate-box">
-								<div class="progress-wrap ftco-animate">
-									<h3><a href="https://airflow.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Apache Airflow</a></h3>
+									<h3><a href="https://git-scm.com/" target="_blank" rel="noopener noreferrer" style="color:black;">Git</a></h3>
 								</div>
 							</div>
 							<div class="col-md-3 animate-box">
 								<div class="progress-wrap ftco-animate">
 									<h3><a href="https://druid.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Apache Druid</a></h3>
 								</div>
-							</div>    
+							</div>
 							<div class="col-md-3 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3><a href="https://superset.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Apache Superset</a></h3>
+									<h3><a href="https://cloud.google.com/bigquery" target="_blank" rel="noopener noreferrer" style="color:black;">BigQuery</a></h3>
 								</div>
 							</div>
 							<div class="col-md-3 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3><a href="https://kafka.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Apache Kafka</a></h3>
+									<h3><a href="https://cloud.google.com/bigtable" target="_blank" rel="noopener noreferrer" style="color:black;">BigTable</a></h3>
 								</div>
 							</div>
 							<div class="col-md-3 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3><a href="https://beam.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Apache Beam</a></h3>
+									<h3><a href="https://www.databricks.com/" target="_blank" rel="noopener noreferrer" style="color:black;">Databricks</a></h3>
 								</div>
 							</div>
 							<div class="col-md-3 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3><a href="https://git-scm.com/" target="_blank" rel="noopener noreferrer" style="color:black;">Git</a></h3>
+									<h3><a href="https://cloud.google.com/spanner" target="_blank" rel="noopener noreferrer" style="color:black;">Spanner</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://www.mongodb.com/" target="_blank" rel="noopener noreferrer" style="color:black;">MongoDB</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://www.mysql.com/" target="_blank" rel="noopener noreferrer" style="color:black;">MySQL</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://cloud.google.com/build" target="_blank" rel="noopener noreferrer" style="color:black;">Cloud Build</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://flink.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Apache Flink</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://cloud.google.com/pubsub" target="_blank" rel="noopener noreferrer" style="color:black;">PubSub</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://kafka.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Kafka</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://cloud.google.com/dataplex" target="_blank" rel="noopener noreferrer" style="color:black;">Dataplex</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://cloud.google.com/looker-studio" target="_blank" rel="noopener noreferrer" style="color:black;">Looker Studio</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://superset.apache.org/" target="_blank" rel="noopener noreferrer" style="color:black;">Superset</a></h3>
+								</div>
+							</div>
+							<div class="col-md-3 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3><a href="https://www.docker.com/" target="_blank" rel="noopener noreferrer" style="color:black;">Docker</a></h3>
 								</div>
 							</div>
 						</div>
@@ -580,6 +625,16 @@
 					</div>
 					<div id="certifications" class="page three">
 						<h2 class="heading">Certifications</h2>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							<div class="text pl-3">
+								<span class="date">02/2023-02/2025</span>
+								<h2>Professional Data Engineer</h2>
+								<span class="position">Google Cloud</span>
+							</div>
+						</div>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
