--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-53F3LWTSHR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-53F3LWTSHR');
+</script>
+
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
 	<!-- Menu Bar -->
